# stock-logistics-putaway

./: .copier-answers.yml  .pre-commit-config.yaml  README.md
setup/_metapackage/: pyproject.toml
stock_picking_putaway_recompute/: README.rst  __manifest__.py
stock_picking_putaway_recompute/i18n/: it.po  stock_picking_putaway_recompute.pot
stock_picking_putaway_recompute/models/: stock_move_line.py  stock_picking.py
stock_picking_putaway_recompute/tests/: test_recompute_putaway.py
stock_picking_putaway_recompute/views/: stock_picking.xml
stock_putaway_child_location_apply/: README.rst  __manifest__.py
stock_putaway_child_location_apply/models/: stock_location.py
stock_putaway_hook/: README.rst  __manifest__.py
stock_putaway_hook/i18n/: stock_putaway_hook.pot
stock_putaway_hook/models/: stock_location.py  stock_putaway_rule.py
stock_putaway_rule_product_handle/: README.rst  __manifest__.py
stock_putaway_rule_product_handle/i18n/: it.po  stock_putaway_rule_product_handle.pot
stock_putaway_rule_product_handle/models/: product_product.py  product_template.py
stock_putaway_rule_product_handle/readme/: CONTEXT.md  DESCRIPTION.md
stock_storage_type/: README.rst  __manifest__.py
stock_storage_type/i18n/: de.po  es.po  es_AR.po  fr.po  it.po  stock_storage_type.pot
stock_storage_type/models/: __init__.py  stock_location.py  stock_move_line.py  stock_quant.py  stock_quant_package.py  stock_storage_category.py  stock_storage_location_sequence.py
stock_storage_type/tests/: __init__.py  (+3 more)
stock_storage_type_buffer/: README.rst  __manifest__.py
stock_storage_type_move_line_qty_picked/: README.rst  __manifest__.py
stock_storage_type_putaway_abc/: README.rst  __manifest__.py
(+23 files in other folders)
